--- a/index.html
+++ b/index.html
@@ -1,28 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue developers-front-app</title>
+    <title>Document</title>
     <meta name="author" content="Bruno Gresslerda Silveira">
     <meta name="description" content="">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style/estilos.css">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="style/jquery/jquery-toast-plugin-1.3.2.min.css">
+    <link rel="stylesheet" type="text/css" href="style/estilos.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/jquery/jquery-3.7.1.min.js"></script>
+    <script src="js/jquery/jquery.blockUI-2.70.0.min.js"></script>
+    <script src="js/jquery/query.toast-1.3.2.min.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
+
 <body>
-    <header>
-        <img src="assets/logo.png" alt="logo" width="4%">
-        <script src="components/header.js"></script>
-    </header>
-    <section>
-        <nav>
-            <script src="components/nav.js"></script>
-        </nav>
-    </section>
-    <footer>
-        <script src="components/footer.js"></script>
-    </footer>
+    <div id="app">
+        <header>
+            <a href="index.html">
+                <figure><img src="assets/logo.png" alt="logo" width="4%"></figure>
+            </a>
+        </header>
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="formulario.html" class="a-menu">Cadastro</a></li>
+                    <li><a href="buscar.html" class="a-menu">Buscar</a></li>
+                </ul>
+            </nav>
+        </section>
+        <footer>
+            <address>©Bruno Gressler da Silveira</address>
+        </footer>
+    </div>
+    <script>
+        new Vue({
+            el: '#app',
+            data() {
+                return {
+                    url: null,
+                    sid: null,
+                    domain: 'http://localhost:1010/v1/sid/'
+                }
+            },
+            beforeCreate: function () {
+                vm.url = window.location
+            },
+            created: function () {
+                let vm = this
+                // vm.gerarSID()
+            },
+            methods: {
+                async gerarSID() {
+                    const caracteres = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+                    let hash = '';
+                    for (let i = 0; i < 20; i++) {
+                        const indiceAleatorio = Math.floor(Math.random() * caracteres.length);
+                        hash += caracteres[indiceAleatorio];
+                    }
+                    let vm = this
+                    console.log(hash)
+                    //     $.blockUI({ message: "<h3 style='font-style: italic;'>Loading...</h3>" });
+                    //     const response = await axios.post(this.domain, hash)
+                    //         .then(function (response) {
+                    //             if (response.status === 200) {
+                    //                 vm.sid = response.data
+                    //             }
+                    //         })
+                    //         .catch(function (error) {
+                    //             toast('Erro ao enviar requisição.', 'ERRO', 'error')
+                    //             throw new Error('Erro ao enviar requisição.');
+                    //         })
+                    //         .finally(function () {
+                    //             $.unblockUI();
+                    //         });
+                },
+            }
+        });
+    </script>
 </body>
+
 </html>
